<resources>

    <string name="app_name">Singing with Nina</string>
    <string name="intro">Press "Play Melody! when you are ready to hear the melody and "Sing!" when you are ready!</string>
    
    <string name="play">Play melody!</string>
    <string name="stop">Change Melody</string>
    <string name="results">High Scores</string>
    <string name="melody">Play Melody</string>
    <string name="voice">Your voice</string>
    <string name="score">	Your score: </string>
    <string name="saveScore">Enter your name to save your score</string>
    <string name="sing">Sing! </string>
    <string name="newMelody">Change Melody</string>
    <string name="start">START!</string>
    <string name="scores">High Scores</string>
    <string name="goBackToStart">Start Screen</string>
    
    <string name="leaderboard">Leaderboard</string>
    
    <string name="first">1. </string>
    <string name="second">2. </string>
    <string name="third">3. </string>
    <string name="fourth">4. </string>
    <string name="fifth">5. </string>
    <string name ="quit"> Quit</string>
    
    <string name="clear">Clear Highscores</string>
     <string name="back">Try Again</string>
     <string name="goback">Back</string>
     <string name="empty"></string>
     <string name="save">Save Score!</string>
    
     <string name="information">Created by Nina Stavnsbjerg, Sebastián Poliak, and Daniel Rivera. \n \n 
         Singing with Nina is our final project for Software Atelier II. \n \n         
         Special Thanks to Davide Eynard and Amanj Sherwany for the help!</string>
     <string name="about">About this app</string>  
     <string name="thanks">Thank you and we hope you enjoy it!</string>  
     

</resources>
