<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#FF000000"
    android:layout_height="match_parent" >
    

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/intro"
        android:textColor="#FFFFFFFF"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@+id/playButton"
        android:onClick = "buttonClicked"
        android:text="@string/stop" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/stopButton"
        android:layout_alignBottom="@+id/stopButton"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:onClick = "buttonClicked"
        android:text="@string/play" />

    <Button
        android:id="@+id/singButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/playButton"
        android:layout_below="@+id/playButton"
        android:layout_marginTop="30dp"
        android:onClick = "buttonClicked"
        android:text="Sing!" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/singButton"
        android:layout_below="@+id/singButton"
        android:layout_marginTop="120dp"/>

</RelativeLayout>
